<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    tools:context=".Registerpage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="420dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backbutton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:onClick="backclick"
        android:soundEffectsEnabled="false"
        android:background="@drawable/custom_backbutton2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registertext"
        android:layout_width="411dp"
        android:layout_height="82dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/emailtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginEnd="300dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/backbutton"
        app:layout_constraintTop_toBottomOf="@+id/registertext" />

    <android.widget.EditText
        android:id="@+id/emailbox"
        android:layout_width="350dp"
        android:layout_height="47dp"
        android:background="@drawable/custom_input2"
        android:text=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/cyan"
        android:layout_marginTop="12dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailtext"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/statement"
        android:layout_marginTop="12dp"
        android:textColor="@color/fadedwhite"
        android:fontFamily="sans-serif-black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailbox"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/passwordtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginEnd="170dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes" />

    <android.widget.EditText
        android:id="@+id/passbox"
        android:inputType="textPassword"
        android:layout_width="350dp"
        android:layout_height="47dp"
        android:background="@drawable/custom_input2"
        android:text=""
        android:ems="10"
        android:textColor="@color/cyan"
        android:layout_marginTop="12dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordtext"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/notes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="12sp"
        android:text="@string/advise"
        android:layout_marginTop="8dp"
        android:textColor="@color/fadedwhite"
        android:fontFamily="sans-serif-black"
        android:layout_marginEnd="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passbox"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/registernow"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_buttonfade"
        android:text="Join us"
        android:enabled="false"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="12dp"
        android:soundEffectsEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notes2"
        />

    <TextView
        android:id="@+id/pass_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="250dp"
        app:layout_constraintTop_toBottomOf="@id/passbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>